--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,11 +23,15 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".home.HomeActivity"
+        <activity
+            android:name=".home.HomeActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait"
                   android:theme="@style/AppTheme.NoActionBar"
                   android:windowSoftInputMode="stateHidden" >
         </activity>
+        <activity
+            android:name="com.woxi.miscellaneous.SettingsActivity"
+            android:screenOrientation="portrait" />
     </application>
 </manifest>
