--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
                   android:windowSoftInputMode="stateHidden" >
         </activity>
         <activity
-            android:name="com.woxi.miscellaneous.SettingsActivity"
+            android:name="com.woxi.sgks_member.miscellaneous.SettingsActivity"
             android:screenOrientation="portrait" />
     </application>
 </manifest>
