--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,5 +36,6 @@
         <activity
             android:name=".home.MemberDetailsActivity"
             android:screenOrientation="portrait"/>
+        <activity android:name=".home.CommitteeDetailsActivity"/>
     </application>
 </manifest>
