--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.google.android.gms:play-services-plus:10.2.0'
     implementation "com.android.support:support-core-utils:27.0.2"
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.3.1'
 }
