--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,8 @@ android {
         minSdkVersion 18
         targetSdkVersion 27
         versionName '2.7'
-        versionCode 19
+        versionCode 1
+        flavorDimensions "prod"
     }
     buildTypes {
         release {
@@ -22,6 +23,20 @@ android {
         javaMaxHeapSize "2g"
     }
     productFlavors {
+        dev {
+            applicationIdSuffix ".debug"
+            versionNameSuffix '-dev'
+            dimension "prod"
+            buildConfigField "String", "BASE_URL", '"http://testapi.sgks.co.in/api/"'
+//            buildConfigField "String", "BASE_URL_MEDIA", '"https://test.mconstruction.co.in"'
+            resValue "string", "app_name", "SGKKSDev"
+        }
+        prod {
+            dimension "prod"
+            buildConfigField "String", "BASE_URL", '"http://api.sgks.co.in/api/v1/"'
+//            buildConfigField "String", "BASE_URL_MEDIA", '"https://mconstruction.co.in"'
+            resValue "string", "app_name", "SGKKS"
+        }
     }
 }
 
