--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     implementation 'com.google.android.gms:play-services-plus:10.2.0'
     implementation "com.android.support:support-core-utils:27.0.2"
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.3.1'
+    implementation 'id.zelory:compressor:2.1.0'
 }
