added production link in build.gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ android {
         }
         prod {
             dimension "prod"
-            buildConfigField "String", "BASE_URL", '"http://api.sgks.co.in/api/v1/"'
+            buildConfigField "String", "BASE_URL", '"http://api.sgks.co.in/api/"'
 //            buildConfigField "String", "BASE_URL_MEDIA", '"https://mconstruction.co.in"'
             resValue "string", "app_name", "SGKKS"
         }
