--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,13 @@
 apply plugin: 'com.android.application'
 android {
+    signingConfigs {
+        config {
+            keyAlias 'sgkks'
+            keyPassword 'edu@12347'
+            storeFile file('/home/mayur/MobileApps/WOXI_Apps_Keys/SGKS_Member_App_Key/SGKS_Android_App_Key.jks')
+            storePassword 'edu@12347'
+        }
+    }
     compileSdkVersion 27
     buildToolsVersion "27.0.3"
     defaultConfig {
@@ -53,7 +61,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.google.android.gms:play-services-plus:10.2.0'
-    implementation "com.android.support:support-core-utils:27.0.2"
+    implementation 'com.android.support:support-core-utils:27.0.2'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.3.1'
     implementation 'id.zelory:compressor:2.1.0'
 }
