--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     compileSdkVersion 27
     buildToolsVersion "27.0.3"
     defaultConfig {
-        applicationId 'com.woxi.sgks_member'
+        applicationId 'com.woxi.sgkks_member'
         minSdkVersion 18
         targetSdkVersion 27
         versionName '1.0'
