--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,5 @@ dependencies {
     implementation 'com.android.support:support-core-utils:27.0.2'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.3.1'
     implementation 'id.zelory:compressor:2.1.0'
+    implementation 'me.relex:circleindicator:1.2.2@aar'
 }
