--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity
             android:name=".home.VerificationActivity"
             android:screenOrientation="portrait"
+            android:label= "@string/verification"
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".miscellaneous.SettingsActivity"
