--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,6 @@ dependencies {
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.3.1'
     implementation 'id.zelory:compressor:2.1.0'
     implementation 'me.relex:circleindicator:1.2.2@aar'
+    implementation 'com.facebook.stetho:stetho:1.5.0'
+    implementation 'com.facebook.stetho:stetho-js-rhino:1.5.0'
 }
