--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
             android:name=".home.HomeActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateHidden"></activity>
         <activity
             android:name=".home.VerificationActivity"
             android:screenOrientation="portrait"
@@ -58,7 +59,9 @@
 
         <service android:name=".local_storage.DataSyncService" />
 
-        <activity android:name=".home.SelectCityActivity"></activity>
+        <activity
+            android:name=".home.SelectCityActivity"
+            android:windowSoftInputMode="stateHidden"></activity>
     </application>
 
 </manifest>
